closetr showcase page, fixed some spacing

--- a/src/blog.scss
+++ b/src/blog.scss
@@ -29,11 +29,11 @@
   }
   & .btn-sim {
     width: 100%;
-    height: 50px;
-    border-radius: 25px;
+    height: 40px;
+    border-radius: 20px;
     background-color: $med-beige;
     display: block;
-    line-height: 50px;
+    line-height: 40px;
     text-align: center;
     font-weight: 500;
     color: $brown;
